tests/baselines/reference/for-of52.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of52.ts(1,11): error TS2451: Cannot redeclare block-scoped variable 'v'.
tests/cases/conformance/es6/for-ofStatements/for-of52.ts(1,14): error TS2451: Cannot redeclare block-scoped variable 'v'.
tests/cases/conformance/es6/for-ofStatements/for-of52.ts(1,20): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of52.ts (3 errors) ====
    for (let [v, v] of [[]]) {}
              ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
                 ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
                       ~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.